# NetTest.Go

./: .gitignore  NetTest.Go.sln  README.md  build_android_go.sh  build_go.sh
.github/workflows/: build.yml  build_avalonia.yml  build_flutter.yml  build_qt.yml  build_wpf.yml
Go/: go.mod  go.sum  main.go
Go/pkg/dns/: client.go  resolver.go  scheme.go
Go/pkg/dns/singdns/: adapter.go  factory.go
Go/pkg/dns/transport/: dialer.go  dialer_direct.go  dialer_socks5.go  https.go  options.go  tcp.go  tls.go  udp.go
Go/pkg/utils/: tool.go
Qt/: CMakeLists.txt  main.cpp
Qt/android/: AndroidManifest.xml
Qt/page/: DNSQueryPage.qml  Main.qml
Qt/src/: main.cpp
Qt/src/dns/: DnsQuery.cpp  DnsQuery.h  DnsQueryTask.cpp  DnsQueryTask.h
Qt/translations/: NetTest_zh_CN.ts
cs/: Directory.Build.props  Directory.Packages.props  NetTest.sln
cs/AvaloniaApplication/: App.axaml  App.axaml.cs  AvaloniaApplication.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
cs/AvaloniaApplication/View/: DnsQueryView.axaml  DnsQueryView.axaml.cs
cs/MauiProgram/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalXmlns.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  MauiProgram.csproj
cs/MauiProgram/View/: DnsQueryPage.xaml  DnsQueryPage.xaml.cs
cs/Service/: Global.cs  Program.cs  Service.csproj
cs/Service/ViewModel/: DnsQueryViewModel.cs
cs/Service/dns/: DnsQuery.cs  DnsQueryTask.cs
cs/wpf/: App.xaml.cs  MainWindow.xaml  wpf.csproj
cs/wpf/View/: DnsQueryView.xaml  DnsQueryView.xaml.cs
flutter/: README.md  pubspec.yaml
flutter/android/: .gitignore
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/nettest/: MainActivity.kt
flutter/lib/: main.dart
flutter/lib/Model/: dns_query_entity.dart
flutter/lib/View/: dns_query_page.dart
flutter/lib/ViewModel/: dns_query_model.dart
flutter/lib/dns/: dns_query_task.dart  dns_repository.dart
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/nettest/: pubspec.yaml
flutter/nettest/android/app/: build.gradle.kts
flutter/nettest/android/app/src/main/kotlin/com/example/nettest/: MainActivity.kt
flutter/nettest/ios/Runner/: Info.plist
flutter/nettest/ios/Runner.xcodeproj/: project.pbxproj
flutter/nettest/linux/: CMakeLists.txt
flutter/nettest/linux/runner/: my_application.cc
flutter/nettest/macos/Runner.xcodeproj/: project.pbxproj
flutter/nettest/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/nettest/macos/Runner/Configs/: AppInfo.xcconfig
flutter/nettest/test/: widget_test.dart
flutter/nettest/web/: index.html  manifest.json
flutter/nettest/windows/runner/: Runner.rc  main.cpp
flutter/test/: widget_test.dart
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
scripts/: build_android_go.py  build_go.py  sync_jni_libs.py
